# Ziv

./: .gitignore  CHANGELOG.md  LICENSE  NOTICE  README.md  README_PYPI.md  SECURITY.md  pyproject.toml
benchmarks/: index_memory.py
scripts/: convert_to_onnx.py
src/lfit/api/: embed_server.py  process_manage.py  process_manager.py
src/lfit/cli/: main.py
src/lfit/core/: chunker.py  file_loader.py  retriever.py  vector_store.py
src/lfit/pipelines/: index_builder.py  retriever.py
src/ziv/api/: embed_server.py  embedder.py  process_manager.py
src/ziv/cli/: feedback.py  main.py
src/ziv/cli/templates/: feedback.html
src/ziv/core/: chunker.py  downloader.py  file_loader.py  vector_store.py
src/ziv/pipelines/: index_builder.py  retriever.py
src/ziv/utils/: hash_utils.py
tests/: model_download_test.py  model_test.py  test_cli.py  test_file_loader.py  test_performance.py  test_search_correctness.py
