[build-system]
requires = ["hatchling"]                        # Build-time deps
build-backend = "hatchling.build"               # Backend to call       

[project]
name = "ziv"                                   # PyPI / pip name
version = "0.2.0"                               # Version
description = "Local File Intelligence Tool"    
requires-python = ">=3.10"                      # Python Version requirement
dependencies = [
    "typer>=0.24.0",                            # Runtime deps
    "faiss-cpu",
    "numpy",
    "psutil",
    "fastapi",
    "uvicorn",
    "requests",
    "tokenizers",
    "huggingface_hub",
    "hf_transfer",
    "onnx",
    "onnxruntime==1.19.2",
]
authors = [
    { name = "Muhd Uwais" }
]

[tool.hatch.build.targets.wheel]
packages = ["src/ziv"]

[project.scripts]
ziv = "ziv.cli.main:run_cli"                           # CLI entry point
