[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ziv"
version = "0.2.0"
description = "Local File Intelligence Tool"
requires-python = ">=3.10"
dependencies = [
    "typer~=0.24.0",
    "faiss-cpu~=1.13.2",
    "numpy~=2.2.6",
    "psutil~=7.2.2",
    "fastapi~=0.135.3",
    "uvicorn~=0.44.0",
    "requests~=2.33.1",
    "tokenizers~=0.22.2",
    "huggingface_hub~=1.10.1",
    "hf_transfer~=0.1.9",
    "onnx~=1.21.0",
    "onnxruntime==1.19.2",
]
authors = [{ name = "Muhd Uwais" }]

[tool.hatch.build.targets.wheel]
packages = ["src/ziv"]


[project.scripts]
ziv = "ziv.cli.main:run_cli"
